--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,3 +24,9 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
+
+    - name: Package
+      uses: actions/upload-artifact@v3
+      with:
+        name: Debug APK
+        path: app/build/outputs/apk/debug/*.apk
